changes added for captcha, ads, multi-admins

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -237,11 +237,19 @@ signup.form.termsofuse = By signing in, you agree to our 'Terms of use'.
 signup.nosmtp1 = Mail server not configured!
 signup.nosmtp2 = Email addresses will not be verified. Make sure you configure SMTP in a production environment.
 
+signup.moderator.welcome = {0} New user registration
+signup.moderator.title = Dear Moderation team,
+signup.moderator.body1 = A new user has registered - <br/><br/>Name - {0}<br/>Email - {1}
+signup.moderator.approve = Approve {0} here
+
+confirmation.welcome = Approved for {0}!
+confirmation.body = Congratulations! Your registration for {0} has been approved. You can visit {1} right away and collaborate with your community.
+
 signin.welcome = Welcome to {0}!
 signin.welcome.title = Hello {0},
-signin.welcome.body1 = You are now part of {0} - a friendly Q&A community where you can get answers to your questions.
-signin.welcome.body2 = To get started, simply navigate to the "Ask question" page and ask a question. You can also help people by answering their questions and you will get reputation points.
-signin.welcome.verify = Verify your email here!
+signin.welcome.body1 = Your registration for {0} is pending approval - {0} is a friendly Q&A community where you can get answers to your questions.
+signin.welcome.body2 = Once approved, you could signin and simply navigate to the "Ask question" page and ask a question. You can also help people by answering their questions and you will get reputation points.
+signin.welcome.verify =
 signin.verify.text = Done! Check your email and follow the link to verify it.
 signin.verify.done = Email verified!
 signin.facebook = Continue with Facebook
